# serializer version: 1
# name: CardViewTest.test_block_job_applications[nav-tabs]
  '''
  <ul aria-labelledby="metiers-title" class="s-tabs-01__nav nav nav-tabs" role="tablist">
                          <li class="nav-item" role="presentation">
                              <a aria-controls="recrutements-en-cours" aria-selected="true" class="nav-link active" data-bs-toggle="tab" href="#recrutements-en-cours" id="recrutements-en-cours-tab" role="tab">
                                  Recrutement en cours <span class="badge badge-sm bg-primary rounded-pill text-white ms-2">0</span>
                              </a>
                          </li>
                          
                              <li class="nav-item" role="presentation">
                                  <a aria-controls="autres-metiers" aria-selected="false" class="nav-link" data-bs-toggle="tab" href="#autres-metiers" id="autres-metiers-tab" role="tab">
                                      Autre métier exercé <span class="badge badge-sm rounded-pill bg-info-light text-dark ms-2">1</span>
                                  </a>
                              </li>
                          
                          <li class="nav-item-dropdown dropdown" role="presentation">
                              <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="sTabs01DropdownMoreLink" role="button"><i class="ri-more-line"></i></a>
                              <div aria-labelledby="sTabs01DropdownMoreLink" class="dropdown-menu dropdown-menu-end"></div>
                          </li>
                      </ul>
  '''
# ---
# name: CardViewTest.test_block_job_applications[tab-content]
  '''
  <div class="tab-content">
                          <div aria-labelledby="recrutements-en-cours-tab" class="tab-pane fade active show" id="recrutements-en-cours" role="tabpanel">
                              
                                  <p class="mb-0">Pour le moment, il n’y a aucun recrutement en cours dans cette structure.</p>
                              
                          </div>
                          
                              <div aria-labelledby="autres-metiers-tab" class="tab-pane fade" id="autres-metiers" role="tabpanel">
                                  <ul class="list-group list-group-flush list-group-link">
                                      
                                          
  
  <li class="list-group-item list-group-item-action">
      <div class="d-flex align-items-center">
          <div>
              <div class="d-flex flex-column flex-lg-row align-items-lg-center">
                  <a class="font-weight-bold stretched-link order-2 order-md-1" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="clic-metiers" href="http://localhost:8000/company/job_description/[PK of JobDescription]/card?back_url=/company/[PK of Company]/card">Plaquiste</a>
                  
              </div>
              <span class="fs-sm mt-1 d-flex align-items-center">
                  <i class="ri-map-pin-2-line ri-sm me-1"></i>
                  
                      Vannes (56)
                  
              </span>
          </div>
          <div class="mt-lg-0 ms-auto d-flex flex-column align-items-end justify-content-center">
              
                  <span class="badge badge-xs rounded-pill bg-accent-02-light text-primary">CDI</span>
              
              
          </div>
      </div>
  </li>
  
                                      
                                  </ul>
                              </div>
                          
                          
                      </div>
  '''
# ---
# name: CardViewTest.test_card_active_and_other_jobs[nav-tabs]
  '''
  <ul aria-labelledby="metiers-title" class="s-tabs-01__nav nav nav-tabs" role="tablist">
                          <li class="nav-item" role="presentation">
                              <a aria-controls="recrutements-en-cours" aria-selected="true" class="nav-link active" data-bs-toggle="tab" href="#recrutements-en-cours" id="recrutements-en-cours-tab" role="tab">
                                  Recrutement en cours <span class="badge badge-sm bg-primary rounded-pill text-white ms-2">1</span>
                              </a>
                          </li>
                          
                              <li class="nav-item" role="presentation">
                                  <a aria-controls="autres-metiers" aria-selected="false" class="nav-link" data-bs-toggle="tab" href="#autres-metiers" id="autres-metiers-tab" role="tab">
                                      Autre métier exercé <span class="badge badge-sm rounded-pill bg-info-light text-dark ms-2">1</span>
                                  </a>
                              </li>
                          
                          <li class="nav-item-dropdown dropdown" role="presentation">
                              <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="sTabs01DropdownMoreLink" role="button"><i class="ri-more-line"></i></a>
                              <div aria-labelledby="sTabs01DropdownMoreLink" class="dropdown-menu dropdown-menu-end"></div>
                          </li>
                      </ul>
  '''
# ---
# name: CardViewTest.test_card_active_and_other_jobs[tab-content]
  '''
  <div class="tab-content">
                          <div aria-labelledby="recrutements-en-cours-tab" class="tab-pane fade active show" id="recrutements-en-cours" role="tabpanel">
                              
                                  <ul class="list-group list-group-flush list-group-link">
                                      
                                          
  
  <li class="list-group-item list-group-item-action">
      <div class="d-flex align-items-center">
          <div>
              <div class="d-flex flex-column flex-lg-row align-items-lg-center">
                  <a class="font-weight-bold stretched-link order-2 order-md-1" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="clic-metiers" href="http://localhost:8000/company/job_description/[PK of JobDescription]/card?back_url=/company/[PK of Company]/card">Plaquiste</a>
                  
              </div>
              <span class="fs-sm mt-1 d-flex align-items-center">
                  <i class="ri-map-pin-2-line ri-sm me-1"></i>
                  
                      Vannes (56)
                  
              </span>
          </div>
          <div class="mt-lg-0 ms-auto d-flex flex-column align-items-end justify-content-center">
              
                  <span class="badge badge-xs rounded-pill bg-accent-02-light text-primary">CDI</span>
              
              
          </div>
      </div>
  </li>
  
                                      
                                  </ul>
                              
                          </div>
                          
                              <div aria-labelledby="autres-metiers-tab" class="tab-pane fade" id="autres-metiers" role="tabpanel">
                                  <ul class="list-group list-group-flush list-group-link">
                                      
                                          
  
  <li class="list-group-item list-group-item-action">
      <div class="d-flex align-items-center">
          <div>
              <div class="d-flex flex-column flex-lg-row align-items-lg-center">
                  <a class="font-weight-bold stretched-link order-2 order-md-1" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="clic-metiers" href="http://localhost:8000/company/job_description/[PK of JobDescription]/card?back_url=/company/[PK of Company]/card">Peintre</a>
                  
              </div>
              <span class="fs-sm mt-1 d-flex align-items-center">
                  <i class="ri-map-pin-2-line ri-sm me-1"></i>
                  
                      Vannes (56)
                  
              </span>
          </div>
          <div class="mt-lg-0 ms-auto d-flex flex-column align-items-end justify-content-center">
              
                  <span class="badge badge-xs rounded-pill bg-accent-02-light text-primary">CDI</span>
              
              
          </div>
      </div>
  </li>
  
                                      
                                  </ul>
                              </div>
                          
                          
                              <div class="d-flex justify-content-end mt-3">
                                  <a aria-label="Postuler auprès de l'employeur solidaire Les petits jardins" class="btn btn-primary btn-ico flex-grow-1 flex-lg-grow-0" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="start_application" href="/apply/[PK of Company]/start">
                                      <i class="ri-draft-line"></i>
                                      <span>Postuler</span>
                                  </a>
                              </div>
                          
                      </div>
  '''
# ---
# name: CardViewTest.test_card_no_active_jobs[nav-tabs]
  '''
  <ul aria-labelledby="metiers-title" class="s-tabs-01__nav nav nav-tabs" role="tablist">
                          <li class="nav-item" role="presentation">
                              <a aria-controls="recrutements-en-cours" aria-selected="true" class="nav-link active" data-bs-toggle="tab" href="#recrutements-en-cours" id="recrutements-en-cours-tab" role="tab">
                                  Recrutement en cours <span class="badge badge-sm bg-primary rounded-pill text-white ms-2">0</span>
                              </a>
                          </li>
                          
                              <li class="nav-item" role="presentation">
                                  <a aria-controls="autres-metiers" aria-selected="false" class="nav-link" data-bs-toggle="tab" href="#autres-metiers" id="autres-metiers-tab" role="tab">
                                      Autre métier exercé <span class="badge badge-sm rounded-pill bg-info-light text-dark ms-2">1</span>
                                  </a>
                              </li>
                          
                          <li class="nav-item-dropdown dropdown" role="presentation">
                              <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="sTabs01DropdownMoreLink" role="button"><i class="ri-more-line"></i></a>
                              <div aria-labelledby="sTabs01DropdownMoreLink" class="dropdown-menu dropdown-menu-end"></div>
                          </li>
                      </ul>
  '''
# ---
# name: CardViewTest.test_card_no_active_jobs[tab-content]
  '''
  <div class="tab-content">
                          <div aria-labelledby="recrutements-en-cours-tab" class="tab-pane fade active show" id="recrutements-en-cours" role="tabpanel">
                              
                                  <p class="mb-0">Pour le moment, il n’y a aucun recrutement en cours dans cette structure.</p>
                              
                          </div>
                          
                              <div aria-labelledby="autres-metiers-tab" class="tab-pane fade" id="autres-metiers" role="tabpanel">
                                  <ul class="list-group list-group-flush list-group-link">
                                      
                                          
  
  <li class="list-group-item list-group-item-action">
      <div class="d-flex align-items-center">
          <div>
              <div class="d-flex flex-column flex-lg-row align-items-lg-center">
                  <a class="font-weight-bold stretched-link order-2 order-md-1" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="clic-metiers" href="http://localhost:8000/company/job_description/[PK of JobDescription]/card?back_url=/company/[PK of Company]/card">Plaquiste</a>
                  
              </div>
              <span class="fs-sm mt-1 d-flex align-items-center">
                  <i class="ri-map-pin-2-line ri-sm me-1"></i>
                  
                      Vannes (56)
                  
              </span>
          </div>
          <div class="mt-lg-0 ms-auto d-flex flex-column align-items-end justify-content-center">
              
                  <span class="badge badge-xs rounded-pill bg-accent-02-light text-primary">CDI</span>
              
              
          </div>
      </div>
  </li>
  
                                      
                                  </ul>
                              </div>
                          
                          
                              <div class="d-flex justify-content-end mt-3">
                                  <a aria-label="Postuler auprès de l'employeur solidaire Les petits jardins" class="btn btn-primary btn-ico flex-grow-1 flex-lg-grow-0" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="start_application" href="/apply/[PK of Company]/start">
                                      <i class="ri-draft-line"></i>
                                      <span>Postuler</span>
                                  </a>
                              </div>
                          
                      </div>
  '''
# ---
# name: CardViewTest.test_card_no_active_members
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
              <div class="container container-messages">
                  
  
                      
  
  
  
                      
                      <div class="alert alert-secondary alert-old-browser" role="status">
                          <p class="mb-0">
                              La version de votre navigateur n'est plus supportée. Veuillez utiliser une version plus récente pour améliorer votre expérience sur notre site.
                          </p>
                      </div>
                  
              </div>
  
              <div class="container container-breadcrumb">
                  
              </div>
  
              
              
                  <section class="s-title-01">
                      <div class="s-title-01__container container">
                          <div class="s-title-01__row row">
                              <div class="s-title-01__col col-12">
                                  
      <h1>Acme inc.</h1>
      <h2>Entreprise d'insertion</h2>
  
                              </div>
                          </div>
                      </div>
                  </section>
              
  
              
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12">
                      <div class="c-box c-box--action mb-4 hidden-if-empty">
                          <h2 class="visually-hidden">Actions rapides</h2>
                          <div class="form-row align-items-center gx-3">
                              
                              
                              <div class="form-group col-12 col-lg d-lg-flex justify-content-lg-end">
                                  <button class="btn btn-lg btn-ico btn-link-white btn-block w-lg-auto" data-bs-placement="bottom" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="http://localhost:8000/company/[PK of Company]/card">
      <i class="ri-file-copy-line ri-lg font-weight-normal"></i>
      <span>Copier le lien de cette fiche</span>
  </button>
  
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
              <div class="row">
                  <div class="col-12 col-lg-8 order-2 order-lg-1 mt-3 mt-lg-0 d-none d-lg-block">
                      <div class="c-box h-100 d-flex align-items-center justify-content-center">
                          
  
                          
  
                          
                              <div class="text-center">
                                  <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-siae-card-no-result.svg"/>
                                  <p class="mb-0 mt-3">
                                      <strong>Oups ! Aucune information en vue !</strong>
                                  </p>
                                  <p>
                                      <i>La structure n’a pas encore renseigné son activité
                                          <br class="d-none d-lg-inline"/>
                                      et l’accompagnement proposé.</i>
                                  </p>
                              </div>
                          
                      </div>
                  </div>
                  <div class="col-12 col-lg-4 order-1 order-lg-2 d-flex flex-column">
                      
                          <div class="c-box mb-3 mb-lg-5 bg-emploi-lightest border-info">
                              <p class="mb-0">Cet employeur n'est pas inscrit, vous ne pouvez pas déposer de candidatures en ligne.</p>
                          </div>
                      
                      <div class="c-box">
                          <h3 class="mb-2">Coordonnées</h3>
                          <div class="d-flex text-secondary fs-sm">
                              <i class="ri-map-pin-2-line me-2"></i>
                              <address class="m-0">112 rue de la Croix-Nivert, 75015 Paris</address>
                          </div>
                          <hr class="my-3"/>
                          <ul class="fs-sm list-unstyled mb-0">
                              
                                  <li>
      <i class="ri-mail-line font-weight-normal me-2"></i>
      <a aria-label="Contact par mail" class="text-break" href="mailto:contact@acmeinc.com">contact@acmeinc.com</a>
      <button class="btn-link font-weight-medium ms-1" data-bs-placement="top" data-bs-title="Copié!" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="contact@acmeinc.com">
          <i class="ri-file-copy-line"></i>
      </button>
  </li>
  
                              
                              
                                  
  <li>
      <i class="ri-phone-line font-weight-normal me-2"></i>
      06 12 34 56 78
      <button class="btn-link font-weight-medium ms-1" data-bs-placement="top" data-bs-title="Copié!" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="0612345678">
          <i class="ri-file-copy-line"></i>
      </button>
  </li>
  
                              
                              
                          </ul>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
      <section class="s-tabs-01 mt-0 pt-0" id="metiers">
          <div class="s-tabs-01__container container">
              <div class="s-tabs-01__row row">
                  <div class="s-tabs-01__col col-12">
                      <h2 class="visually-hidden" id="metiers-title">Métiers de la structure</h2>
                      <ul aria-labelledby="metiers-title" class="s-tabs-01__nav nav nav-tabs" role="tablist">
                          <li class="nav-item" role="presentation">
                              <a aria-controls="recrutements-en-cours" aria-selected="true" class="nav-link active" data-bs-toggle="tab" href="#recrutements-en-cours" id="recrutements-en-cours-tab" role="tab">
                                  Recrutement en cours <span class="badge badge-sm bg-primary rounded-pill text-white ms-2">0</span>
                              </a>
                          </li>
                          
                          <li class="nav-item-dropdown dropdown" role="presentation">
                              <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="sTabs01DropdownMoreLink" role="button"><i class="ri-more-line"></i></a>
                              <div aria-labelledby="sTabs01DropdownMoreLink" class="dropdown-menu dropdown-menu-end"></div>
                          </li>
                      </ul>
                      <div class="tab-content">
                          <div aria-labelledby="recrutements-en-cours-tab" class="tab-pane fade active show" id="recrutements-en-cours" role="tabpanel">
                              
                                  <p class="mb-0">Pour le moment, il n’y a aucun recrutement en cours dans cette structure.</p>
                              
                          </div>
                          
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
      
  
          </main>
  '''
# ---
# name: CardViewTest.test_card_no_other_jobs[nav-tabs]
  '''
  <ul aria-labelledby="metiers-title" class="s-tabs-01__nav nav nav-tabs" role="tablist">
                          <li class="nav-item" role="presentation">
                              <a aria-controls="recrutements-en-cours" aria-selected="true" class="nav-link active" data-bs-toggle="tab" href="#recrutements-en-cours" id="recrutements-en-cours-tab" role="tab">
                                  Recrutement en cours <span class="badge badge-sm bg-primary rounded-pill text-white ms-2">1</span>
                              </a>
                          </li>
                          
                          <li class="nav-item-dropdown dropdown" role="presentation">
                              <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="sTabs01DropdownMoreLink" role="button"><i class="ri-more-line"></i></a>
                              <div aria-labelledby="sTabs01DropdownMoreLink" class="dropdown-menu dropdown-menu-end"></div>
                          </li>
                      </ul>
  '''
# ---
# name: CardViewTest.test_card_no_other_jobs[tab-content]
  '''
  <div class="tab-content">
                          <div aria-labelledby="recrutements-en-cours-tab" class="tab-pane fade active show" id="recrutements-en-cours" role="tabpanel">
                              
                                  <ul class="list-group list-group-flush list-group-link">
                                      
                                          
  
  <li class="list-group-item list-group-item-action">
      <div class="d-flex align-items-center">
          <div>
              <div class="d-flex flex-column flex-lg-row align-items-lg-center">
                  <a class="font-weight-bold stretched-link order-2 order-md-1" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="clic-metiers" href="http://localhost:8000/company/job_description/[PK of JobDescription]/card?back_url=/company/[PK of Company]/card">Plaquiste</a>
                  
              </div>
              <span class="fs-sm mt-1 d-flex align-items-center">
                  <i class="ri-map-pin-2-line ri-sm me-1"></i>
                  
                      Vannes (56)
                  
              </span>
          </div>
          <div class="mt-lg-0 ms-auto d-flex flex-column align-items-end justify-content-center">
              
                  <span class="badge badge-xs rounded-pill bg-accent-02-light text-primary">CDI</span>
              
              
          </div>
      </div>
  </li>
  
                                      
                                  </ul>
                              
                          </div>
                          
                          
                              <div class="d-flex justify-content-end mt-3">
                                  <a aria-label="Postuler auprès de l'employeur solidaire Les petits jardins" class="btn btn-primary btn-ico flex-grow-1 flex-lg-grow-0" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="start_application" href="/apply/[PK of Company]/start">
                                      <i class="ri-draft-line"></i>
                                      <span>Postuler</span>
                                  </a>
                              </div>
                          
                      </div>
  '''
# ---
# name: test_hx_dora_services[Dora service card with address]
  '''
  <div class="card-body">
                                                  <a class="btn-link mb-2" href="https://fake.api.gouv.fr/services/svc1?mtm_campaign=LesEmplois&amp;mtm_kwd=CardServiceFicheDePoste" rel="noopener" target="_blank">Coupe les cheveux</a>
                                                  <ul class="list-unstyled list-inline fs-sm">
                                                      <li class="list-inline-item">Coiffeur</li>
                                                      
                                                          <li class="list-inline-item">
                                                              <i aria-hidden="true" class="ri ri-map-pin-2-line me-2"></i>75056 Paris
                                                          </li>
                                                      
                                                  </ul>
                                                  <div class="badge-group">
                                                      
                                                          <span class="badge badge-sm bg-info-lighter text-info text-uppercase text-decoration-none">A</span>
                                                      
                                                  </div>
                                              </div>
  '''
# ---
# name: test_hx_dora_services[Dora service card]
  '''
  <div class="card-body">
                                                  <a class="btn-link mb-2" href="https://fake.api.gouv.fr/services/svc1?mtm_campaign=LesEmplois&amp;mtm_kwd=CardServiceFicheDePoste" rel="noopener" target="_blank">Coupe les cheveux</a>
                                                  <ul class="list-unstyled list-inline fs-sm">
                                                      <li class="list-inline-item">Coiffeur</li>
                                                      
                                                  </ul>
                                                  <div class="badge-group">
                                                      
                                                          <span class="badge badge-sm bg-info-lighter text-info text-uppercase text-decoration-none">A</span>
                                                      
                                                  </div>
                                              </div>
  '''
# ---
